--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 <title></title>
 </head>
 <body>
-Marcel Bulik
+Marcel Bulik<br>
 <a href="https://marcelbulik.github.io/zad1">Zadanie1</a>
 </body>
 </html>
+
 
 
