--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
 Marcel Bulik<br>
-<a href="https://marcelbulik.github.io/zad1">Zadanie1</a>
+<a href="https://marcelbulik.github.io/zad1">Zadanie1</a><br>
+<a href="https://marcelbulik.github.io/zad2">Zadanie2</a><br>
+
 </body>
 </html>
+
 
 
 
