--- a/zadanie3/zadanie3.html
+++ b/zadanie3/zadanie3.html
@@ -6,8 +6,9 @@
 <title>Zadanie3</title>
 </head>
 <body>
-<img src="https://marcelbulik.github.io/zadanie3/program-zrzutekranu.png" alt="Marcel Bulik">
-<a href="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3">"Omówienie programu"</a>
-<a href="https://marcelbulik.github.io/zadanie3/film%20o%20programie.mp4">"Omówienie programu na filmie"</a>
+<img src="https://marcelbulik.github.io/zadanie3/program-zrzutekranu.png" alt="Marcel Bulik"><br>
+<a href="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3">"Omówienie programu"</a><br>
+<a href="https://marcelbulik.github.io/zadanie3/film%20o%20programie.mp4">"Omówienie programu na filmie"</a><br>
 </body>
+
 </html>
