--- a/zadanie3/zadanie3.html
+++ b/zadanie3/zadanie3.html
@@ -1,14 +1,40 @@
 <!doctype html>
-<html>
+<html lang="pl">
 <head>
 <meta charset="utf-8">
-<meta name="description" content="Tu wpisz opis zawartości strony">
-<title>Zadanie3</title>
-</head>
-<body>
-<img src="https://marcelbulik.github.io/zadanie3/program-zrzutekranu.png" alt="Marcel Bulik"><br>
-<a href="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3">"Omówienie programu"</a><br>
-<a href="https://marcelbulik.github.io/zadanie3/film%20o%20programie.mp4">"Omówienie programu na filmie"</a><br>
-</body>
+<meta name="description" content="Prezentacja programu – zrzut ekranu i omówienie">
+<title>Zadanie 3</title>
 
+<style>
+    img {
+        width: 50%;          
+        float: left;         
+        margin: 0 20px 20px 0; 
+    }
+</style>
+</head>
+
+<body>
+
+
+<img src="https://marcelbulik.github.io/zadanie3/program-zrzutekranu.png" alt="Zrzut ekranu programu">
+
+<p>
+Powyższy program przedstawia wypisanie słów "Hello world". Program Marcela Bulika.
+</p>
+
+<p>
+<a href="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3">
+Omówienie programu (plik)
+</a>
+</p>
+
+<p>
+<a href="https://marcelbulik.github.io/zadanie3/film%20o%20programie.mp4">
+Omówienie programu na filmie
+</a>
+</p>
+
+</body>
 </html>
+
