--- a/zadanie3/zadanie3.html
+++ b/zadanie3/zadanie3.html
@@ -34,7 +34,11 @@ Omówienie programu (plik)
 Omówienie programu na filmie
 </a>
 </p>
-
+    
+<p>
+<a href="https://learn.microsoft.com/pl-pl/cpp/windows/walkthrough-creating-a-standard-cpp-program-cpp?view=msvc-170">Pomoc w tworzeniu strony</a>
+</p>
 </body>
 </html>
+
 
