--- a/zadanie3/zadanie3.html
+++ b/zadanie3/zadanie3.html
@@ -25,6 +25,7 @@ Powyższy program przedstawia wypisanie słów "Hello world". Program Marcela Bu
 
 <p>
 <a href="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3">
+<embed src="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3"="50" height="50">
 Omówienie programu (plik)
 </a>
 </p>
@@ -40,5 +41,6 @@ Omówienie programu na filmie
 </p>
 </body>
 </html>
+
 
 
