--- a/zadanie3/zadanie3.html
+++ b/zadanie3/zadanie3.html
@@ -24,14 +24,13 @@ Powyższy program przedstawia wypisanie słów "Hello world". Program Marcela Bu
 </p>
 
 <p>
-<a href="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3"><br>
-<embed src="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3"="50" height="50">
-Omówienie programu (plik)
+<embed src="https://marcelbulik.github.io/zadanie3/program-omowienie.mp3"="200" height="150">
+Omówienie programu głosowe
 </a>
 </p>
 
 <p>
-<embed src="https://marcelbulik.github.io/zadanie3/film%20o%20programie.mp4"="50" height="50">
+<embed src="https://marcelbulik.github.io/zadanie3/film%20o%20programie.mp4"="500" height="400">
 Omówienie programu na filmie
 </a>
 </p>
@@ -41,6 +40,7 @@ Omówienie programu na filmie
 </p>
 </body>
 </html>
+
 
 
 
