--- a/zadanie3/zadanie3.html
+++ b/zadanie3/zadanie3.html
@@ -24,14 +24,14 @@ Powyższy program przedstawia wypisanie słów "Hello world". Program Marcela Bu
 </p>
 
 <p>
-<embed src="https://marcelbulik.github.io/zadanie3/program-omowienie.mp3"="400" height="100"><br>
-Omówienie programu głosowe
+<embed src="https://marcelbulik.github.io/zadanie3/program-omowienie.mp3"="400" height="100">
+ Omówienie programu głosowe
 </a>
 </p>
 
 <p>
-<embed src="https://marcelbulik.github.io/zadanie3/film%20o%20programie.mp4"="5000" height="300"><br>
-Omówienie programu na filmie
+<embed src="https://marcelbulik.github.io/zadanie3/film%20o%20programie.mp4"="2000" height="300">
+ Omówienie programu na filmie
 </a>
 </p>
     
@@ -40,6 +40,7 @@ Omówienie programu na filmie
 </p>
 </body>
 </html>
+
 
 
 
