--- a/zadanie3/zadanie3.html
+++ b/zadanie3/zadanie3.html
@@ -36,10 +36,11 @@ Powyższy program przedstawia wypisanie słów "Hello world". Program Marcela Bu
 </p>
     
 <p>
-<right><a href="https://learn.microsoft.com/pl-pl/cpp/windows/walkthrough-creating-a-standard-cpp-program-cpp?view=msvc-170">Pomoc w tworzeniu strony</a><a href="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3"></right><br>
+<a href="https://learn.microsoft.com/pl-pl/cpp/windows/walkthrough-creating-a-standard-cpp-program-cpp?view=msvc-170">Pomoc w tworzeniu strony</a><a href="https://marcelbulik.github.io/zadanie3/program-omowienie.aup3"><br>
 </p>
 </body>
 </html>
+
 
 
 
