--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@ Marcel Bulik<br>
 <a href="https://marcelbulik.github.io/zad2">Zadanie2</a><br>
 <a href="https://marcelbulik.github.io/zadanie3/zadanie3">Zadanie3</a><br>
 <a href="https://marcelbulik.github.io/zad4/bmi.html">bmi</a><br>
+  <a href="https://marcelbulik.github.io/zad4/kalkulator.html">kalkulator</a><br>
 </body>
 </html>
+
 
 
 
