--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ Marcel Bulik<br>
 <a href="https://marcelbulik.github.io/zad1">Zadanie1</a><br>
 <a href="https://marcelbulik.github.io/zad2">Zadanie2</a><br>
 <a href="https://marcelbulik.github.io/zadanie3/zadanie3">Zadanie3</a><br>
-<a href="https://marcelbulik.github.io/zad4/bmi.html">bmi</a><br>
-  <a href="https://marcelbulik.github.io/zad4/kalkulator.html">kalkulator</a><br>
+<a href="https://marcelbulik.github.io/zad4">Zadanie4</a><br>
 </body>
 </html>
+
 
 
 
