--- a/zad4/otwarcie.html
+++ b/zad4/otwarcie.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 Marcel Bulik<br>
-<a href="https://marcelbulik.github.io/bmi.html">BMI</a><br>
-<a href="https://marcelbulik.github.io/kalkulator.html">kalkulator</a><br>
+<a href="https://marcelbulik.github.io/zad4/bmi.html">BMI</a><br>
+<a href="https://marcelbulik.github.io/zad4/kalkulator.html">kalkulator</a><br>
 
 
 </body>
