--- a/zad4/kalkulator.html
+++ b/zad4/kalkulator.html
@@ -45,8 +45,8 @@ b=<input type="Text" name="jakas_wymyslona_nazwa3"><br>
 
 function mnozenie() {
 /* Odwołanie do formularza i jego elementów przez nazwę*/
-var skl1=parseFloat(document.test.a.value);
-var skl2=parseFloat(document.test.b.value);
+var skl1=parseFloat(document.mnozenie.a.value);
+var skl2=parseFloat(document.mnozenie.b.value);
 var wynik = skl1*skl2;
 alert(wynik);
 }
@@ -76,3 +76,4 @@ b=<input type="Text" name="b"><br>
 <input type="Button" value="Oblicz dzielenie" onclick="dzielenie()">
 </form>
 <hr>
+
