--- a/zad4/kalkulator.html
+++ b/zad4/kalkulator.html
@@ -55,7 +55,7 @@ alert(wynik);
 <form name="mnozenie">
 a=<input type="Text" name="a"><br>
 b=<input type="Text" name="b"><br>
-<input type="Button" value="Mnożenie" onclick="mnozenie()">
+<input type="Button" value="Oblicz mnożenie" onclick="mnozenie()">
 </form>
 <hr>
 
@@ -76,4 +76,5 @@ b=<input type="Text" name="b"><br>
 <input type="Button" value="Oblicz dzielenie" onclick="dzielenie()">
 </form>
 <hr>
+
 
