--- a/zad4/kalkulator.html
+++ b/zad4/kalkulator.html
@@ -45,14 +45,14 @@ b=<input type="Text" name="jakas_wymyslona_nazwa3"><br>
 
 function mnozenie() {
 /* Odwołanie do formularza i jego elementów przez nazwę*/
-var skl1=parseFloat(document.mnozenie.a.value);
-var skl2=parseFloat(document.mnozenie.b.value);
+var skl1=parseFloat(document.mnozenie1.a.value);
+var skl2=parseFloat(document.mnozenie1.b.value);
 var wynik = skl1*skl2;
 alert(wynik);
 }
 </script>
 
-<form name="mnozenie">
+<form name="mnozenie1">
 a=<input type="Text" name="a"><br>
 b=<input type="Text" name="b"><br>
 <input type="Button" value="Oblicz mnożenie" onclick="mnozenie()">
@@ -76,5 +76,6 @@ b=<input type="Text" name="b"><br>
 <input type="Button" value="Oblicz dzielenie" onclick="dzielenie()">
 </form>
 <hr>
+
 
 
